k8s/traffic/frontend-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: devsecops

spec:
  parentRefs:
    - name: devsecops-gateway
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: frontend-blue
          namespace: devsecops-blue
          port: 80
          weight: 100
