k8s/traffic/order-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: order-route
  namespace: devsecops
spec:
  parentRefs:
    - name: devsecops-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/orders
      backendRefs:
        - name: order-service-blue
          namespace: devsecops-blue
          port: 8083
          weight: 100      
        - name: order-service-green
          namespace: devsecops-green
          port: 8083
          weight: 0
