k8s/traffic/user-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-route
  namespace: devsecops
spec:
  parentRefs:
    - name: devsecops-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
        - path:
            type: PathPrefix
            value: /api/users
      backendRefs:
        - name: user-service-blue
          namespace: devsecops-blue
          port: 8081
          weight: 100
        - name: user-service-green  
          namespace: devsecops-green
          port: 8081
          weight: 0
